fix: galery image size flickering

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,4 +26,43 @@ code {
     .image-gallery-fullscreen-button {
         display: none;
     }
+
+    .image-gallery-content.left .image-gallery-slide .image-gallery-image,
+    .image-gallery-content.right .image-gallery-slide .image-gallery-image {
+        width: 70vw !important;
+        height: 40vh !important;
+    }
+}
+
+
+@media (max-width: 450px) {
+    .image-gallery-content.left .image-gallery-slide .image-gallery-image,
+    .image-gallery-content.right .image-gallery-slide .image-gallery-image {
+        width: 50vw !important;
+        height: 20vh !important;
+    }
+}
+
+
+@media (min-width: 1200px) {
+    .image-gallery-content.left .image-gallery-slide .image-gallery-image,
+    .image-gallery-content.right .image-gallery-slide .image-gallery-image {
+        object-fit: contain !important;
+    }
+}
+
+
+
+.image-gallery-content.left .image-gallery-slide .image-gallery-image,
+.image-gallery-content.right .image-gallery-slide .image-gallery-image {
+    height: 70vh;
+    overflow: hidden;
+    object-fit: cover;
+    transition: height 0.5s ease-out;
+}
+
+.fullscreen .image-gallery-slide img {
+    max-height: 100vh !important;
+    height: auto !important;
+    width: 100% !important;
 }
